container issues fixed

--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
                 </ul>
             </nav>
         </header>
+    </div>
 
 <main>
     <!-- Formulaire de recherche -->
+    <div class="container">
         <section id="recherche">
 
                 <h1>Trouvez votre hébérgement pour des vacances de rêve</h1>
@@ -82,10 +84,12 @@
         <!-- flex basis pour elemens autre que .cards
         supprimer .cards
         + cf doc Vanessa -->
-
+</div>
+    <div class="container-not">
     <div id="hebpop">
     <!-- HEBERGEMENTS -->
         <section id="hebergement">
+            <div class="container-2">
             <h2>Hébérgements à Marseille</h2>
                 <div class="cards">
                     <article>
@@ -232,11 +236,13 @@
                         </a>
                     </article>
                 </div>
-                <a href="#" class="showmore">Afficher Plus</a> 
+                <a href="#" class="showmore">Afficher Plus</a>
+                </div>
         </section>
 
         <!-- Les plus Populaires -->
         <section id="populaire">
+            <div class="container-2">
             <div class="header-pop">
             <h2>Les plus Populaires</h2>
             <i class="fa-solid fa-arrow-trend-up"></i>
@@ -315,10 +321,13 @@
                     </article>
                 </a>
             </div>
+            </div>
         </section>
     </div>
+</div>
 
     <!-- Activités à Marseille -->
+    <div class="container">
     <section id="activite">
         <h2>Activités à Marseille</h2>
 
@@ -410,8 +419,8 @@
         </div>
 
     </section>
+    </div>
 </main>
-</div>
 
 <!-- LIENS DE NAVIGATIONS -->
 <footer>
