--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
         supprimer .cards
         + cf doc Vanessa -->
 </div>
-    <div class="container-not">
+    <div class="container nopadding">
     <div id="hebpop">
     <!-- HEBERGEMENTS -->
         <section id="hebergement">
-            <div class="container-2">
+            <div class="container">
             <h2>Hébérgements à Marseille</h2>
                 <div class="cards">
                     <article>
@@ -242,7 +242,7 @@
 
         <!-- Les plus Populaires -->
         <section id="populaire">
-            <div class="container-2">
+            <div class="container">
             <div class="header-pop">
             <h2>Les plus Populaires</h2>
             <i class="fa-solid fa-arrow-trend-up"></i>
